# PTUI

./: LICENSE  README.md  pyproject.toml  setup.cfg
demos/demo1(mario)/: code.py
demos/demo2(2077)/: code.py
demos/demo3(troll)/: code.py
demos/demos4(clock)/: code.py
src/PTUI/: exeptions.py  screens.py  styles.py  widgets.py
