[metadata]
# replace with your username:
name = PTUI
version = 0.2.1
author = Wasymir
description =  Small, Python, Flutter Inspired TUI Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wasymir/PTUI
project_urls =
    Bug Tracker = https://github.com/Wasymir/PTUI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
